[tool.poetry]
name = "agent-service"
version = "0.1.0"
description = "Statistical agent service"
authors = ["Guilherme <g.lisboa.oliveira@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
